adds experience and projects section content

--- a/index.html
+++ b/index.html
@@ -15,27 +15,209 @@
       <ul>
         <li>Connor Jones</li>
         <li>About</li>
-        <li>Experience</li>
+        <li>Experience</br>
+        & Education</li>
         <li>Projects</li>
         <li>Contact</li>
       </ul>
   </aside>
   <main>
     <section class="connor-jones">
-      <img>
-      <h2>Connor Jones</h2>
-      <p>basic introduction</p>
+      <h1 class="name">Connor Jones</h1>
+      <p class="subhead-one">Full-Stack Software Engineer</p>
+      <p class="subhead-two">Client Service Management</p>
+      <p class="subhead-three">Market Intelligence</p>
+      <p class="subhead-four">Project Management</p>
+      <p class="subhead-five">Data Analytics</p>
     </section>
+    
+    
+    <header class="about-heading-container">
+      <h2 class="about-heading">About</h2>
+    </header>
     <section class="about">
-      <p>A little about myself...</p>
-      <p>Skills</p>
+      <div class="about-body">
+        <img>
+        <p>I am a uniquely qualified software engineer with experience in agile market research, international project management, data analytics, and financial services. Having recently completed a rigorous 500 hour immersive course in full-stack software engineering, I have designed and developed several full-stack applications, leveraging multiple languages, libraries, frameworks, and utilizing industry-standard collaboration methodologies and best practices. Prior to becoming a software engineer, my background includes nearly five years in international project management, market data analysis, and client success management. These experiences have spanned from a mid-size startup specializing in agile project methodology to a Fortune 100 financial services company.</p>
+      </div>
+      <div class="skills">
+        <div class="tech">
+          <h3>Technical Skills</h3>
+          <div class="tech-skills">
+            <div class="languages">
+              <h4>Languages</h4>
+              <ul>
+                <li>JavaScript</li>
+                <li>Python</li>
+                <li>HTML5</li>
+                <li>CSS3</li>
+              </ul>
+            </div>
+            <div class="other-tech">
+              <div class="libraries-frameworks">
+                <h5>Libraries/Frameworks</h5>
+                <ul>
+                  <li>React.js</li>
+                  <li>Express</li>
+                  <li>Django</li>
+                  <li>Node.js</li>
+                  <li>jQuery</li>
+                  <li>EJS</li>
+                  <li>Jinga</li>
+                  <li>Sass</li>
+                </ul>
+              </div>
+              <div class="databases">
+                <h5>Databases</h5>
+                <ul>
+                  <li>PostgreSQL</li>
+                  <li>NoSQL</li>
+                </ul>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="other">
+          <h3>Other Skills</h3>
+          <ul>
+            <li>Git/GitHub</li>
+            <li>IBM SPSS Statistics software</li>
+            <li>Microsoft Office Suite products (advanced)</li>
+            <li>Qualtrics research platform</li>
+            <li>SalesForce</li>
+          </ul>
+        </div>
+      </div>
     </section>
+
+
+    <header class="experience-heading-container">
+      <h2 class="experience-heading">Experience & Eduction</h2>
+    </header>
     <section class="experience">
-      <p>Experiences</p>
-      <p>Link to resume</p>
+      <div class="general-assembly">
+        <h2>Software Engineering Immersive</h2>
+        <h4>General Assembly</h4>
+        <p>Remote | Apr 2020 - Jul 2020</p>
+        <ul>
+          <li>500 hour immersive course on full stack software engineering</li>
+          <li>Designed and developed several full stack web applications, leveraging multiple languages, libraries, and frameworks</li>
+          <li>Collaborated with project teams and cohorts utilizing agile methodology and Git/GitHub</li>
+        </ul>
+      </div>
+
+      <div class="gutcheck">
+        <h2>Client Services Manager</h2>
+        <h4>GutCheck</h4>
+        <p>Denver, CO | Dec 2019 - Apr 2020</p>
+        <ul>
+          <li>Advised clients on agile market research solutions as the primary POC</li>
+          <li>Lead cross-functional internal project launch</li>
+          <li>Designed research strategies and authored detailed project proposals</li>
+        </ul>
+      </div>
+
+      <div class="iss">
+        <h2>International Market Intelligence Associate</h2>
+        <h4>Institutional Shareholder Services</h4>
+        <p>Boston, MA | May 2017 - Dec 2019</p>
+        <ul>
+          <li>Pan-European Fund Selector project manager</li>
+          <li>UK Financial Advisor project manager </li>
+          <li>German Financial Advisor project manager</li>
+          <li>US Broker-Dealer Research Department project manager</li>
+        </ul>
+      </div>
+
+      <div class="factset">
+        <h2>Data Analyst</h2>
+        <h4>FactSet Research Systems</h4>
+        <p>Boston, MA | Sept 2015 - May 2017</p>
+        <ul>
+          <li>Promoted to project manager within one year</li>
+          <li>Contributor on a wide range of financial distribution research</li>
+          <li>Critically analyzed client performance through various metrics</li>
+        </ul>
+      </div>
+
+      <div class="app-state">
+        <h2>Bachelor of Science</h2>
+        <h4>Appalachian State University</h4>
+        <p>Boone, NC | Aug 2011 - May 2015</p>
+        <p>Major: Psychology - Business Concentration</p>
+        <p>Minors: Statistics; Marketing</p>
+        <p>GPA: 3.7</p>
+      </div>
+
+      <p>For a comprehensive look at my experiences and accomplishments, please download my <a href="">resume</a>.</p>
     </section>
+
+    <header class="projects-heading-container">
+      <h2 class="projects-heading">Projects</h2>
+    </header>
     <section class="projects">
-      <p>List of projects</p>
+      <div class="travelwise">
+        <div class="travelwise-screenshot">
+          <p>Travelwise Screenshot Placeholder</p>
+        </div>
+        <h2>Travelwise</h2>
+        <p>A budgeting application for trip planning</p>
+        <ul>
+          <li>MongoDB</li>
+          <li>Express</li>
+          <li>Node.js</li>
+          <li>JavaScript</li>
+          <li>Express Sessions</li>
+          <li>jQuery</li>
+          <li>Sass</li>
+        </ul>
+      </div>
+
+      <div class="wayfarer">
+        <div class="wayfarer-screenshot">
+          <p>Wayfarer Screenshot Placeholder</p>
+        </div>
+        <h2>Wayfarer</h2>
+        <p>A travel blog to track city information and recommendations</p>
+        <ul>
+          <li>Django</li>
+          <li>Python</li>
+          <li>PostgreSQL</li>
+          <li>jQuery</li>
+        </ul>
+      </div>
+
+      <div class="match-mix">
+        <div class="match-mix-screenshot">
+          <p>Match & Mix Screenshot Placeholder</p>
+        </div>
+        <h2>Match & Mix</h2>
+        <p>Inventory application for tracking and accessing cocktail recipes</p>
+        <ul>
+          <li>MongoDB</li>
+          <li>Express</li>
+          <li>Node.js</li>
+          <li>JavaScript</li>
+          <li>EJS</li>
+          <li>jQuery</li>
+          <li>Skeleton</li>
+        </ul>
+      </div>
+
+      <div class="mancala">
+        <div class="mancala-screenshot">
+          <p>Mancala Screenshot Placeholder</p>
+        </div>
+        <h2>Mancala</h2>
+        <p>Classic two-player marble game</p>
+        <ul>
+          <li>JavaScript</li>
+          <li>jQuery</li>
+          <li>HTML</li>
+          <li>CSS</li>
+        </ul>
+      </div>
+
     </section>
     <section class="contact">
       <p>Email</p>
