--- a/index.html
+++ b/index.html
@@ -1,15 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+  <script src="https://kit.fontawesome.com/468ce0f85d.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" type="text/css" href="styles/main.css">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Connor Jones</title>
 </head>
+<!-- <div class="site-open">
+  <h1>hello world.</h1>
+</div> -->
 <body>
-  <!-- <div class="site-open">
-    <h1>hello world.</h1>
-  </div> -->
+  <div class="fixed-background">
+  </div>
   <aside class="sidebar">
     <nav>
       <ul>
@@ -38,7 +42,7 @@
     <section class="about">
       <div class="about-body">
         <img>
-        <p>I am a uniquely qualified software engineer with experience in agile market research, international project management, data analytics, and financial services. Having recently completed a rigorous 500 hour immersive course in full-stack software engineering, I have designed and developed several full-stack applications, leveraging multiple languages, libraries, frameworks, and utilizing industry-standard collaboration methodologies and best practices. Prior to becoming a software engineer, my background includes nearly five years in international project management, market data analysis, and client success management. These experiences have spanned from a mid-size startup specializing in agile project methodology to a Fortune 100 financial services company.</p>
+        <p>I am a uniquely qualified software engineer with experience in agile market research, international project management, data analytics, and financial services. Having recently completed a rigorous 500 hour immersive course in full-stack software engineering, I have designed and developed several full-stack applications, leveraging multiple languages, libraries, frameworks, and utilizing industry-standard collaboration best practices. Prior to becoming a software engineer, my background includes nearly five years in international project management, market data analysis, and client success management. These experiences have spanned from a mid-size startup specializing in agile project methodology to a Fortune 100 financial services company.</p>
       </div>
       <div class="skills">
         <div class="tech">
@@ -47,10 +51,10 @@
             <div class="languages">
               <h4>Languages</h4>
               <ul>
-                <li>JavaScript</li>
-                <li>Python</li>
-                <li>HTML5</li>
-                <li>CSS3</li>
+                <li><i class="fab fa-js"></i> JavaScript</li>
+                <li><i class="fab fa-python"></i> Python</li>
+                <li><i class="fab fa-html5"></i> HTML5</li>
+                <li><i class="fab fa-css3"></i> CSS3</li>
               </ul>
             </div>
             <div class="other-tech">
@@ -219,13 +223,16 @@
       </div>
 
     </section>
+
+    <header class="contact-heading-container">
+      <h2 class="contact-heading">Contact</h2>
+    </header>
     <section class="contact">
       <p>Email</p>
       <p>LinkedIn</p>
       <p>GitHub</p>
     </section>
   </main>
-  <sec
 
   
   <script src="scripts/app.js"></script>
