adds tab close transitions

--- a/index2.html
+++ b/index2.html
@@ -51,6 +51,23 @@
     <h1>Jones</h1>
   </div>
 
+
+  <div class="projects container">
+    <div class="projects-home-snippet">
+      <h1>Connor</h1>
+      <h1>Jones</h1>
+    </div>
+    <div class="projects-page">
+      <div class="projects-home-tab">
+        <i class="fas fa-chevron-up"></i>
+        <h4>Home</h4>
+      </div>
+      <div class="projects-contents">
+        <h1>Projects</h1>
+      </div>
+    </div>
+  </div>
+
   <script src="scripts/app.js"></script>
 </body>
 </html>
