--- a/index2.html
+++ b/index2.html
@@ -3,61 +3,51 @@
 <head>
   <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
   <script src="https://kit.fontawesome.com/468ce0f85d.js" crossorigin="anonymous"></script>
-  <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+SC:wght@100;300;400;500;700;900&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,600;0,700;1,300;1,400;1,600;1,700&display=swap" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="styles/main2.css">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Connor Jones</title>
 </head>
 <body>
-  <!-- <div class="site-open">
+  <div class="site-open">
     <h1><span id="hello-world"></span><span id="underscore">_</span></h1>
-  </div> -->
+  </div>
 
   <main>
     <div class="about">
+      <img class="home-pic" src="https://i.imgur.com/6OVDcZx.jpg" alt="connor-jones">
       <h1 class="connor-jones">Connor Jones</h1>
       <p class="about-me">I am a uniquely qualified software engineer with experience in agile market research, international project management, data analytics, and financial services. Having recently completed a rigorous 500 hour immersive course in full-stack software engineering, I have designed and developed several full-stack applications, leveraging multiple languages, libraries, frameworks, and utilizing industry-standard collaboration best practices. Prior to becoming a software engineer, my background includes nearly five years in international project management, market data analysis, and client success management. These experiences have spanned from a mid-size startup specializing in agile project methodology to a Fortune 100 financial services company.</p>
     </div>
 
-    <div class="experience-tab">
-      <i class="fas fa-chevron-left"></i>
-      <h4>Experience</h4>
+    <div class="experience-page">
+      <div class="experience-contents">
+        <h1>Experience</h1>
+      </div>
+      <div class="experience-home-tab">
+        <h4>Home</h4>
+        <i class="fas fa-chevron-right"></i>
+      </div>
+      <div class="experience-tab">
+        <i class="fas fa-chevron-left"></i>
+        <h4>Experience</h4>
+      </div>
+    </div>
+    <div class="experience-home-snippet">
+      <img class="snippet-pic" src="https://i.imgur.com/6OVDcZx.jpg" alt="connor-jones">
+      <h2>Connor Jones</h2>
     </div>
 
-    <div class="projects-tab">
-      <i class="fas fa-chevron-down"></i>
-      <h4>Projects</h4>
-    </div>
 
-    <div class="contact-tab">
-      <h4>Contact</h4>
-      <i class="fas fa-chevron-right"></i>
-    </div>
-  </main>
-
-
-  <div class="experience-page">
-    <div class="experience-home-tab">
-      <h4>Home</h4>
-      <i class="fas fa-chevron-right"></i>
-    </div>
-    <div class="experience-contents">
-      <h1>Experience</h1>
-    </div>
-  </div>
-  <div class="experience-home-snippet">
-    <h1>Connor</h1>
-    <h1>Jones</h1>
-  </div>
-
-
-  <div class="projects container">
     <div class="projects-home-snippet">
-      <h1>Connor</h1>
-      <h1>Jones</h1>
+      <h1>Connor Jones</h1>
     </div>
     <div class="projects-page">
+      <div class="projects-tab">
+        <i class="fas fa-chevron-down"></i>
+        <h4>Projects</h4>
+      </div>
       <div class="projects-home-tab">
         <i class="fas fa-chevron-up"></i>
         <h4>Home</h4>
@@ -66,7 +56,26 @@
         <h1>Projects</h1>
       </div>
     </div>
-  </div>
+
+
+    <div class="contact-page">
+      <div class="contact-contents">
+        <h1>Contact</h1>
+      </div>
+      <div class="contact-home-tab">
+        <i class="fas fa-chevron-left"></i>
+        <h4>Home</h4>
+      </div>
+      <div class="contact-tab">
+        <h4>Contact</h4>
+        <i class="fas fa-chevron-right"></i>
+      </div>
+    </div>
+    <div class="contact-home-snippet">
+      <h2>Connor Jones</h2>
+    </div>
+
+  </main>
 
   <script src="scripts/app.js"></script>
 </body>
