--- a/index2.html
+++ b/index2.html
@@ -3,22 +3,31 @@
 <head>
   <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
   <script src="https://kit.fontawesome.com/468ce0f85d.js" crossorigin="anonymous"></script>
-  <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,600;0,700;1,300;1,400;1,600;1,700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800&family=Open+Sans:ital,wght@0,300;0,400;0,600;0,700;0,800;1,300;1,400;1,600;1,700;1,800&display=swap" rel="stylesheet">
+  <link href="https://i.imgur.com/wdn9tDP.png?1" rel="icon">
   <link rel="stylesheet" type="text/css" href="styles/main2.css">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Connor Jones</title>
 </head>
 <body>
-  <div class="site-open">
+  <!-- <div class="site-open">
     <h1><span id="hello-world"></span><span id="underscore">_</span></h1>
-  </div>
+  </div> -->
 
   <main>
     <div class="about">
-      <img class="home-pic" src="https://i.imgur.com/6OVDcZx.jpg" alt="connor-jones">
+      <img class="home-pic" src="https://lh3.googleusercontent.com/hw_GQeEJrBWZdUnfcnVAR-iXSFn_mYo8wXAjKdPIi9rDnMDTYBSxUn-Pv1Rf-pppVKMqOnqhf8Ek0zqFmOocnjcQjxXcnjGl6CkNaMa_93OYwZ4pOKf706jCZ-sDL781ulI5h-Jx9TjDfdy02r6zmEPB-3UebzZn2bLX6o8Ki-wZH-jeQOkSYISooLrEh1ni6nNYgD7HtVOt4tuUcvKHgqGl7JQdUwO20bRILn7PH1uD3O0fCVs34kQ83yVqFyYVqJ-4C-XykbSFeAJIxkTBgj7AytEZ2R-V9kRdCGCX-xl-Dv1fEcuYvwt1gb5h6skrr_nlMekaNf3jbeQLVIK0nsQaoWAFcCwxEYDRGxGqW5gMpBFGWPYu7NVkdsSp_qEgpW4i52snIQrCKhl9HTiTdOdbzQ_N3_btgiF424BqcNNzIW5Gfqk38h2c8ulOyQrOJLj0qCiQx1msFmccC70l-_IhxpzmaSHb8EeywiDXAzLlQqclsVHuWdf-_a5ltSKXfyYzrvknhYCDwpOgWeYR1he1Xxp7EbTz739_Qf1NaJ0G-9tPG3vc2wuBQPlyfz7ctGtR-NIQKtJShAaXbb0zamT_jqP0YUp6FdRp0pdf0UBlqzJ57MIV1yfhJpNj5CCIOZO7Xq-Cp-TRL_A-7q5YATppLtZarCZuRGPzJsJ8exziHaNuP6OF6nqYkbzG=w900-h905-no?authuser=0" alt="connor-jones">
       <h1 class="connor-jones">Connor Jones</h1>
-      <p class="about-me">I am a uniquely qualified software engineer with experience in agile market research, international project management, data analytics, and financial services. Having recently completed a rigorous 500 hour immersive course in full-stack software engineering, I have designed and developed several full-stack applications, leveraging multiple languages, libraries, frameworks, and utilizing industry-standard collaboration best practices. Prior to becoming a software engineer, my background includes nearly five years in international project management, market data analysis, and client success management. These experiences have spanned from a mid-size startup specializing in agile project methodology to a Fortune 100 financial services company.</p>
+      <h3 class="software-engineer">Software Engineer</h3>
+      <p class="about-engineering">I am a full-stack software engineer with a sharp eye for details and a relentless dedication to quality. I have completed more than 500 hours of training in an engineering immersive where I designed and developed several full-stack applications leveraging multiple languages, libraries, frameworks, and industry-standard collaboration tools.</p>
+        
+      <p class="about-experience">Prior to becoming a software engineer, I spent nearly five years in international project management, market data analysis, and client success management. <span class="media-hide">These experiences have spanned from a mid-size startup specializing in agile project methodology to a Fortune 100 financial services company.</span></p>
+
+      <div class="connect">
+        <i class="fab fa-github-square"></i>
+        <i class="fab fa-linkedin"></i>
+      </div>
     </div>
 
     <div class="experience-page">
@@ -35,25 +44,106 @@
       </div>
     </div>
     <div class="experience-home-snippet">
-      <img class="snippet-pic" src="https://i.imgur.com/6OVDcZx.jpg" alt="connor-jones">
-      <h2>Connor Jones</h2>
-    </div>
-
-
-    <div class="projects-home-snippet">
-      <h1>Connor Jones</h1>
-    </div>
-    <div class="projects-page">
-      <div class="projects-tab">
-        <i class="fas fa-chevron-down"></i>
-        <h4>Projects</h4>
+      <div class="snippet-top">
+        <img class="snippet-pic" src="https://lh3.googleusercontent.com/hw_GQeEJrBWZdUnfcnVAR-iXSFn_mYo8wXAjKdPIi9rDnMDTYBSxUn-Pv1Rf-pppVKMqOnqhf8Ek0zqFmOocnjcQjxXcnjGl6CkNaMa_93OYwZ4pOKf706jCZ-sDL781ulI5h-Jx9TjDfdy02r6zmEPB-3UebzZn2bLX6o8Ki-wZH-jeQOkSYISooLrEh1ni6nNYgD7HtVOt4tuUcvKHgqGl7JQdUwO20bRILn7PH1uD3O0fCVs34kQ83yVqFyYVqJ-4C-XykbSFeAJIxkTBgj7AytEZ2R-V9kRdCGCX-xl-Dv1fEcuYvwt1gb5h6skrr_nlMekaNf3jbeQLVIK0nsQaoWAFcCwxEYDRGxGqW5gMpBFGWPYu7NVkdsSp_qEgpW4i52snIQrCKhl9HTiTdOdbzQ_N3_btgiF424BqcNNzIW5Gfqk38h2c8ulOyQrOJLj0qCiQx1msFmccC70l-_IhxpzmaSHb8EeywiDXAzLlQqclsVHuWdf-_a5ltSKXfyYzrvknhYCDwpOgWeYR1he1Xxp7EbTz739_Qf1NaJ0G-9tPG3vc2wuBQPlyfz7ctGtR-NIQKtJShAaXbb0zamT_jqP0YUp6FdRp0pdf0UBlqzJ57MIV1yfhJpNj5CCIOZO7Xq-Cp-TRL_A-7q5YATppLtZarCZuRGPzJsJ8exziHaNuP6OF6nqYkbzG=w900-h905-no?authuser=0" alt="connor-jones">
+        <h2 class="snippet-name">Connor Jones</h2>
+        <h4 class="snippet-title">Software Engineer</h4>
+        <div class="snippet-connect">
+          <i class="fab fa-github-square"></i>
+          <i class="fab fa-linkedin"></i>
+        </div>
       </div>
-      <div class="projects-home-tab">
+      <div class="snippet-bottom">
+        <div class="language-db-container">
+          <div class="languages">
+            <h4>Languages</h4>
+            <ul>
+              <li><i class="fab fa-js"></i> JavaScript</li>
+              <li><i class="fab fa-python"></i> Python</li>
+              <li><i class="fab fa-html5"></i> HTML5</li>
+              <li><i class="fab fa-css3"></i> CSS3</li>
+            </ul>
+          </div>
+          <div class="databases">
+            <h4>Databases</h4>
+            <ul>
+              <li>>PostgreSQL</li>
+              <li>>NoSQL</li>
+            </ul>
+          </div>
+        </div>
+        <div class="libraries-frameworks">
+          <h4>Libraries/Frameworks</h4>
+          <ul>
+            <li>>React.js</li>
+            <li>>Express</li>
+            <li>>Django</li>
+            <li>>Node.js</li>
+            <li>>jQuery</li>
+            <li>>EJS</li>
+            <li>>Jinga</li>
+            <li>>Sass</li>
+          </ul>
+        </div>
+      </div>
+    </div>
+
+
+    <div class="work-home-snippet">
+      <div class="snippet-left">
+        <img class="snippet-pic-horizontal" src="https://lh3.googleusercontent.com/hw_GQeEJrBWZdUnfcnVAR-iXSFn_mYo8wXAjKdPIi9rDnMDTYBSxUn-Pv1Rf-pppVKMqOnqhf8Ek0zqFmOocnjcQjxXcnjGl6CkNaMa_93OYwZ4pOKf706jCZ-sDL781ulI5h-Jx9TjDfdy02r6zmEPB-3UebzZn2bLX6o8Ki-wZH-jeQOkSYISooLrEh1ni6nNYgD7HtVOt4tuUcvKHgqGl7JQdUwO20bRILn7PH1uD3O0fCVs34kQ83yVqFyYVqJ-4C-XykbSFeAJIxkTBgj7AytEZ2R-V9kRdCGCX-xl-Dv1fEcuYvwt1gb5h6skrr_nlMekaNf3jbeQLVIK0nsQaoWAFcCwxEYDRGxGqW5gMpBFGWPYu7NVkdsSp_qEgpW4i52snIQrCKhl9HTiTdOdbzQ_N3_btgiF424BqcNNzIW5Gfqk38h2c8ulOyQrOJLj0qCiQx1msFmccC70l-_IhxpzmaSHb8EeywiDXAzLlQqclsVHuWdf-_a5ltSKXfyYzrvknhYCDwpOgWeYR1he1Xxp7EbTz739_Qf1NaJ0G-9tPG3vc2wuBQPlyfz7ctGtR-NIQKtJShAaXbb0zamT_jqP0YUp6FdRp0pdf0UBlqzJ57MIV1yfhJpNj5CCIOZO7Xq-Cp-TRL_A-7q5YATppLtZarCZuRGPzJsJ8exziHaNuP6OF6nqYkbzG=w900-h905-no?authuser=0" alt="connor-jones">
+        <div class="snippet-info-horizontal">
+          <h2 class="snippet-name-horizontal">Connor Jones</h2>
+          <h4 class="snippet-title-horizontal">Software Engineer</h4>
+          <div class="snippet-connect-horizontal">
+            <i class="fab fa-github-square"></i>
+            <i class="fab fa-linkedin"></i>
+          </div>
+        </div>
+      </div>
+      <div class="snippet-right">
+        <div class="horizontal-languages">
+          <h4>Languages</h4>
+          <ul>
+            <li><i class="fab fa-js"></i> JavaScript</li>
+            <li><i class="fab fa-python"></i> Python</li>
+            <li><i class="fab fa-html5"></i> HTML5</li>
+            <li><i class="fab fa-css3"></i> CSS3</li>
+          </ul>
+        </div>
+        <div class="horizontal-libraries-frameworks">
+          <h4>Libraries/Frameworks</h4>
+          <ul>
+            <li>>React.js</li>
+            <li>>Express</li>
+            <li>>Django</li>
+            <li>>Node.js</li>
+            <li>>jQuery</li>
+            <li>>EJS</li>
+            <li>>Jinga</li>
+            <li>>Sass</li>
+          </ul>
+        </div>
+        <div class="horizontal-databases">
+          <h4>Databases</h4>
+          <ul>
+            <li>>PostgreSQL</li>
+            <li>>NoSQL</li>
+          </ul>
+        </div>
+      </div>
+    </div>
+    <div class="work-page">
+      <div class="work-tab">
+        <i class="fas fa-chevron-down"></i>
+        <h4>Work</h4>
+      </div>
+      <div class="work-home-tab">
         <i class="fas fa-chevron-up"></i>
         <h4>Home</h4>
       </div>
-      <div class="projects-contents">
-        <h1>Projects</h1>
+      <div class="work-contents">
+        <h1>Featured Work</h1>
       </div>
     </div>
 
