adds work/project layout

--- a/index2.html
+++ b/index2.html
@@ -20,19 +20,78 @@
       <img class="home-pic" src="https://lh3.googleusercontent.com/hw_GQeEJrBWZdUnfcnVAR-iXSFn_mYo8wXAjKdPIi9rDnMDTYBSxUn-Pv1Rf-pppVKMqOnqhf8Ek0zqFmOocnjcQjxXcnjGl6CkNaMa_93OYwZ4pOKf706jCZ-sDL781ulI5h-Jx9TjDfdy02r6zmEPB-3UebzZn2bLX6o8Ki-wZH-jeQOkSYISooLrEh1ni6nNYgD7HtVOt4tuUcvKHgqGl7JQdUwO20bRILn7PH1uD3O0fCVs34kQ83yVqFyYVqJ-4C-XykbSFeAJIxkTBgj7AytEZ2R-V9kRdCGCX-xl-Dv1fEcuYvwt1gb5h6skrr_nlMekaNf3jbeQLVIK0nsQaoWAFcCwxEYDRGxGqW5gMpBFGWPYu7NVkdsSp_qEgpW4i52snIQrCKhl9HTiTdOdbzQ_N3_btgiF424BqcNNzIW5Gfqk38h2c8ulOyQrOJLj0qCiQx1msFmccC70l-_IhxpzmaSHb8EeywiDXAzLlQqclsVHuWdf-_a5ltSKXfyYzrvknhYCDwpOgWeYR1he1Xxp7EbTz739_Qf1NaJ0G-9tPG3vc2wuBQPlyfz7ctGtR-NIQKtJShAaXbb0zamT_jqP0YUp6FdRp0pdf0UBlqzJ57MIV1yfhJpNj5CCIOZO7Xq-Cp-TRL_A-7q5YATppLtZarCZuRGPzJsJ8exziHaNuP6OF6nqYkbzG=w900-h905-no?authuser=0" alt="connor-jones">
       <h1 class="connor-jones">Connor Jones</h1>
       <h3 class="software-engineer">Software Engineer</h3>
+      <i class="fas fa-chevron-down"></i>
       <p class="about-engineering">I am a full-stack software engineer with a sharp eye for details and a relentless dedication to quality. I have completed more than 500 hours of training in an engineering immersive where I designed and developed several full-stack applications leveraging multiple languages, libraries, frameworks, and industry-standard collaboration tools.</p>
         
       <p class="about-experience">Prior to becoming a software engineer, I spent nearly five years in international project management, market data analysis, and client success management. <span class="media-hide">These experiences have spanned from a mid-size startup specializing in agile project methodology to a Fortune 100 financial services company.</span></p>
 
       <div class="connect">
-        <i class="fab fa-github-square"></i>
-        <i class="fab fa-linkedin"></i>
+        <a href="https://github.com/connorj1002" target="_blank"><i class="fab fa-github-square"></i></a>
+        <a href="https://www.linkedin.com/in/connor-a-jones/" target="_blank"><i class="fab fa-linkedin"></i></a>
+        <a href="mailto:connorj1002@gmail.com"><i class="fas fa-envelope-square"></i></a>
       </div>
     </div>
 
     <div class="experience-page">
       <div class="experience-contents">
-        <h1>Experience</h1>
+        <h1 class="experience-education">Professional Experience & Education</h1>
+        <div class="general-assembly">
+          <h2>Software Engineering Immersive</h2>
+          <h4>General Assembly</h4>
+          <p>Remote | Apr 2020 - Jul 2020</p>
+          <ul>
+            <li>500 hour immersive course on full stack software engineering</li>
+            <li>Designed and developed several full stack applications, both independently and as part of a team</li>
+            <li>Collaborated with project teams and cohorts utilizing agile methodology and Git/GitHub</li>
+          </ul>
+        </div>
+  
+        <div class="gutcheck">
+          <h2>Client Services Manager</h2>
+          <h4>GutCheck</h4>
+          <p>Denver, CO | Dec 2019 - Apr 2020</p>
+          <ul>
+            <li>Advised clients on agile market research solutions as the primary POC</li>
+            <li>Lead cross-functional internal project launch</li>
+            <li>Designed research strategies and authored detailed project proposals</li>
+          </ul>
+        </div>
+  
+        <div class="iss">
+          <h2>International Market Intelligence Associate</h2>
+          <h4>Institutional Shareholder Services</h4>
+          <p>Boston, MA | May 2017 - Dec 2019</p>
+          <ul>
+            <li>Pan-European Fund Selector project manager</li>
+            <li>UK Financial Advisor project manager </li>
+            <li>German Financial Advisor project manager</li>
+            <li>US Broker-Dealer Research Department project manager</li>
+          </ul>
+        </div>
+  
+        <div class="factset">
+          <h2>Data Analyst</h2>
+          <h4>FactSet Research Systems</h4>
+          <p>Boston, MA | Sept 2015 - May 2017</p>
+          <ul>
+            <li>Promoted to project manager within one year</li>
+            <li>Contributor on a wide range of financial distribution research</li>
+            <li>Critically analyzed client performance through various metrics</li>
+          </ul>
+        </div>
+  
+        <div class="app-state">
+          <h2>Bachelor of Science</h2>
+          <h4>Appalachian State University</h4>
+          <p>Boone, NC | Aug 2011 - May 2015</p>
+          <ul>
+            <li>Major: Psychology - Business Concentration</li>
+            <li>Minors: Statistics; Marketing</li>
+            <li>GPA: 3.7</li>
+          </ul>
+        </div>
+  
+        <p class="resume">For a comprehensive look at my experiences and accomplishments, please download my <a href="https://docs.google.com/document/d/1nr8ZNYyO5yV-n4FcdGgEJUfRIFPyReJK9JyNTZDPeLM/edit?usp=sharing" target="_blank">resume</a>.</p>
       </div>
       <div class="experience-home-tab">
         <h4>Home</h4>
@@ -49,8 +108,9 @@
         <h2 class="snippet-name">Connor Jones</h2>
         <h4 class="snippet-title">Software Engineer</h4>
         <div class="snippet-connect">
-          <i class="fab fa-github-square"></i>
-          <i class="fab fa-linkedin"></i>
+          <a href="https://github.com/connorj1002" target="_blank"><i class="fab fa-github-square"></i></a>
+          <a href="https://www.linkedin.com/in/connor-a-jones/" target="_blank"><i class="fab fa-linkedin"></i></a>
+          <a href="mailto:connorj1002@gmail.com"><i class="fas fa-envelope-square"></i></a>
         </div>
       </div>
       <div class="snippet-bottom">
@@ -76,9 +136,9 @@
           <h4>Libraries/Frameworks</h4>
           <ul>
             <li>>React.js</li>
+            <li>>Node.js</li>
             <li>>Express</li>
             <li>>Django</li>
-            <li>>Node.js</li>
             <li>>jQuery</li>
             <li>>EJS</li>
             <li>>Jinga</li>
@@ -96,8 +156,9 @@
           <h2 class="snippet-name-horizontal">Connor Jones</h2>
           <h4 class="snippet-title-horizontal">Software Engineer</h4>
           <div class="snippet-connect-horizontal">
-            <i class="fab fa-github-square"></i>
-            <i class="fab fa-linkedin"></i>
+            <a href="https://github.com/connorj1002" target="_blank"><i class="fab fa-github-square"></i></a>
+            <a href="https://www.linkedin.com/in/connor-a-jones/" target="_blank"><i class="fab fa-linkedin"></i></a>
+            <a href="mailto:connorj1002@gmail.com"><i class="fas fa-envelope-square"></i></a>
           </div>
         </div>
       </div>
@@ -115,9 +176,9 @@
           <h4>Libraries/Frameworks</h4>
           <ul>
             <li>>React.js</li>
+            <li>>Node.js</li>
             <li>>Express</li>
             <li>>Django</li>
-            <li>>Node.js</li>
             <li>>jQuery</li>
             <li>>EJS</li>
             <li>>Jinga</li>
@@ -133,6 +194,7 @@
         </div>
       </div>
     </div>
+
     <div class="work-page">
       <div class="work-tab">
         <i class="fas fa-chevron-down"></i>
@@ -144,6 +206,60 @@
       </div>
       <div class="work-contents">
         <h1>Featured Work</h1>
+        <div class="applications">
+          <div class="travelwise-container app-container">
+            <div class="travelwise-snapshot app-snapshot">
+            </div>
+            <div class="travelwise-info app-info">
+              <h2>Travelwise</h2>
+              <p>A budgeting application for trip planning.</p>
+              <ul>
+                <li>>MongoDB</li>
+                <li>>Express</li>
+                <li>>Node.js</li>
+                <li>>JavaScript</li>
+                <li>>Express Sessions</li>
+                <li>>jQuery</li>
+                <li>>Sass</li>
+              </ul>
+            </div>
+          </div>
+
+          <div class="match-mix-container app-container">
+            <div class="match-mix-snapshot app-snapshot">
+            </div>
+            <div class="match-mix-info app-info">
+              <h2>Match & Mix</h2>
+              <p>An inventory application for tracking and accessing cocktail recipes.</p>
+              <ul>
+                <li>>MongoDB</li>
+                <li>>Express</li>
+                <li>>Node.js</li>
+                <li>>JavaScript</li>
+                <li>>EJS</li>
+                <li>>jQuery</li>
+                <li>>Skeleton</li>
+              </ul>
+            </div>
+          </div>
+
+          <div class="mancala-container app-container">
+            <div class="mancala-snapshot app-snapshot">
+              <h4>* Picture coming soon! *</h4>
+            </div>
+            <div class="mancala-info app-info">
+              <h2>Mancala</h2>
+              <p>A classic two-player marble game. Built after 2 weeks of JavaScript training.</p>
+              <ul>
+                <li>>JavaScript</li>
+                <li>>jQuery</li>
+                <li>>HTML</li>
+                <li>>CSS</li>
+              </ul>
+            </div>
+          </div>
+
+        </div>
       </div>
     </div>
 
