adds outstanding changes

--- a/index2.html
+++ b/index2.html
@@ -11,9 +11,9 @@
   <title>Connor Jones</title>
 </head>
 <body>
-  <!-- <div class="site-open">
+  <div class="site-open">
     <h1><span id="hello-world"></span><span id="underscore">_</span></h1>
-  </div> -->
+  </div>
 
   <main>
     <div class="about">
