--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         </div>
   
         <div class="factset">
-          <h2>Data Analyst</h2>
+          <h2>Market Data Analyst</h2>
           <h4>FactSet Research Systems</h4>
           <p>Boston, MA | Sept 2015 - May 2017</p>
           <ul>
@@ -141,7 +141,7 @@
             <li>>Django</li>
             <li>>jQuery</li>
             <li>>EJS</li>
-            <li>>Jinga</li>
+            <li>>Jinja</li>
             <li>>Sass</li>
           </ul>
         </div>
@@ -181,7 +181,7 @@
             <li>>Django</li>
             <li>>jQuery</li>
             <li>>EJS</li>
-            <li>>Jinga</li>
+            <li>>Jinja</li>
             <li>>Sass</li>
           </ul>
         </div>
@@ -330,7 +330,7 @@
             <li>>Django</li>
             <li>>jQuery</li>
             <li>>EJS</li>
-            <li>>Jinga</li>
+            <li>>Jinja</li>
             <li>>Sass</li>
           </ul>
         </div>
