adds site nav info

--- a/index.html
+++ b/index.html
@@ -30,6 +30,22 @@
         <a href="https://www.linkedin.com/in/connor-a-jones/" target="_blank"><i class="fab fa-linkedin"></i></a>
         <a href="mailto:connorj1002@gmail.com"><i class="fas fa-envelope-square"></i></a>
       </div>
+
+      <div class="site-nav site-nav-experience">
+        <h5>Use the side bars<br/>
+          to navigate!</h5>
+        <i class="fas fa-share"></i>
+      </div>
+      <div class="site-nav site-nav-work">
+        <i class="fas fa-share"></i>
+        <h5>Use the side bars<br/>
+          to navigate!</h5>
+      </div>
+      <div class="site-nav site-nav-contact">
+        <h5>Use the side bars<br/>
+          to navigate!</h5>
+        <i class="fas fa-share"></i>
+      </div>
     </div>
 
     <div class="experience-page">
@@ -87,11 +103,11 @@
           <ul>
             <li>Major: Psychology - Business Concentration</li>
             <li>Minors: Statistics; Marketing</li>
-            <li>GPA: 3.7</li>
+            <li>Magna Cum Laude</li>
           </ul>
         </div>
   
-        <p class="resume">For a comprehensive look at my experiences and accomplishments, please download my <a href="https://docs.google.com/document/d/1nr8ZNYyO5yV-n4FcdGgEJUfRIFPyReJK9JyNTZDPeLM/edit?usp=sharing" target="_blank">resume</a>.</p>
+        <p class="resume">For a comprehensive look at my experiences and accomplishments, please download my <a href="https://drive.google.com/file/d/1XamthTXJv6uvNepjWkrPCK8gq5t3U0e-/view?usp=sharing" target="_blank">resume</a>.</p>
       </div>
       <div class="experience-home-tab">
         <h4>Home</h4>
