adds minor styling changes

--- a/index.html
+++ b/index.html
@@ -286,8 +286,8 @@
           <h1>Contact Me</h1>
           <form class="contact form" action="https://mailthis.to/connorj1002@gmail.com"
             method="POST" encType="multipart/form-data">
-            <input type="text" name="name" placeholder="Your name"><br/>
-            <input type="email" name="_replyto" placeholder="Your email"><br/>
+            <input class="form-field" type="text" name="name" placeholder="Your name"><br/>
+            <input class="form-field" type="email" name="_replyto" placeholder="Your email"><br/>
             <textarea name="message" placeholder="Your message"></textarea><br/>
             <input type="file" name="file" placeholder="Attachments (optional)"><br/>
             <input type="hidden" name="_subject" value="Portfolio Contact Form">
